force-app/main/default/objects/LLC_BI__Relationship_Loan_to_Value_Calc_Config__c/fields/LLC_BI__Collateral_Association__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Collateral_Association__c</fullName>
    <description>Administrators populate this multi-select picklist with the collateral association(s) to filter for collateral to include in the RLTV calculation.</description>
    <inlineHelpText>Select the collateral association(s) to filter for the collateral you want to include in the RLTV calculation.</inlineHelpText>
    <label>Collateral Association</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owner</fullName>
                <default>true</default>
                <label>Owner</label>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Landlord</fullName>
            </value>
            <value>
                <fullName>Lessee</fullName>
            </value>
            <value>
                <fullName>Lessor</fullName>
            </value>
            <value>
                <fullName>Lienholder</fullName>
            </value>
            <value>
                <fullName>Tenant</fullName>
            </value>
            <value>
                <fullName>Buyer</fullName>
            </value>
            <value>
                <fullName>Seller</fullName>
            </value>
            <value>
                <fullName>Trustee</fullName>
            </value>
            <value>
                <fullName>Assignee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>