force-app/main/default/objects/LLC_BI__Relationship_Loan_to_Value_Calc_Config__c/fields/LLC_BI__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The administrator selects this checkbox to activate the calculation.</description>
    <inlineHelpText>Select this checkbox to activate the relationship loan to value calculation.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>