force-app/main/default/objects/LLC_BI__Relationship_Loan_to_Value_Calc_Config__c/fields/LLC_BI__Status__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Status__c</fullName>
    <description>Administrators populate this multi-select picklist with the loan status(es) to filter for loans to include in the RLTV calculation.</description>
    <inlineHelpText>Select the loan status(es) to filter for the loans you want to include in the RLTV calculation.</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Paid Out</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Charge-Off</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>